# Rust-In-Peace

./: Cargo.toml  README.md  app.js  index.html  obit_generator.js  style.css.css
.github/workflows/: build-wasm.yml  deploy.yml
project-root/: Cargo.toml  Cargo.toml.txt  app.js.js  index.html.html  style.css
project-root/src/: lib.rs
src/: lib.rs
