[package]
name = "obit_generator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8", features = ["getrandom_js"] }  # â† Key change!

[dependencies.getrandom]
version = "0.2"
features = ["js"]  # â† Enables WebAssembly support
