[package]
name = "obit_generator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"  # Updated to latest version
console_error_panic_hook = "0.1.7"
rand = { version = "0.8", features = ["getrandom"] }

[dependencies.getrandom]
version = "0.2"
features = ["js"]

# Disable wasm-opt optimization
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
